[gd_scene load_steps=77 format=2]

[ext_resource path="res://spritesheet___paper_mario_walking_by_skippyp008_dbqwz3p-fullview.png" type="Texture" id=1]
[ext_resource path="res://Knight/Braccia e armi.png" type="Texture" id=3]
[ext_resource path="res://sm.gd" type="Script" id=4]
[ext_resource path="res://Position2D.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42.175, 54.8715 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 56.2627, 32.4764 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.511111 )
colors = PoolColorArray( 0.379074, 0.423287, 0.574219, 1, 0.870588, 0.87451, 0.894118, 0.776471 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.949367, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 2
emission_box_extents = Vector3( 1, 11, 1 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 367.82
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 8.0
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 170, 227 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 170, 0, 170, 227 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 340, 0, 170, 227 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 510, 0, 170, 227 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 680, 0, 170, 227 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 850, 0, 170, 227 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 227, 170, 227 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 170, 227, 170, 227 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 340, 227, 170, 227 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 510, 227, 170, 227 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 680, 227, 170, 227 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 850, 227, 170, 227 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 454, 170, 227 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 170, 454, 170, 227 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 340, 454, 170, 227 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 510, 454, 170, 227 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 680, 454, 170, 227 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 850, 454, 170, 227 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 681, 170, 227 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 170, 681, 170, 227 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 340, 681, 170, 227 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 510, 681, 170, 227 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 680, 681, 170, 227 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 850, 681, 170, 227 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 908, 170, 227 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 170, 908, 170, 227 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 340, 908, 170, 227 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 510, 908, 170, 227 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 680, 908, 170, 227 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 850, 908, 170, 227 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1135, 170, 227 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 170, 1135, 170, 227 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 340, 1135, 170, 227 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 510, 1135, 170, 227 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 680, 1135, 170, 227 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 850, 1135, 170, 227 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1362, 170, 227 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 170, 1362, 170, 227 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 340, 1362, 170, 227 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 510, 1362, 170, 227 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 680, 1362, 170, 227 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 850, 1362, 170, 227 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1589, 170, 227 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 170, 1589, 170, 227 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 340, 1589, 170, 227 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 510, 1589, 170, 227 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 680, 1589, 170, 227 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 850, 1589, 170, 227 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1816, 170, 227 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 170, 1816, 170, 227 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 340, 1816, 170, 227 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 510, 1816, 170, 227 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 680, 1816, 170, 227 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 850, 1816, 170, 227 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2043, 170, 227 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 170, 2043, 170, 227 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 340, 2043, 170, 227 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 510, 2043, 170, 227 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 680, 2043, 170, 227 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 850, 2043, 170, 227 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2270, 170, 227 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 170, 2270, 170, 227 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 170, 227 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 170, 227 )

[sub_resource type="SpriteFrames" id=72]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 74 ), SubResource( 74 ), SubResource( 74 ), SubResource( 74 ), SubResource( 74 ), SubResource( 74 ), SubResource( 74 ), SubResource( 74 ), SubResource( 74 ), SubResource( 74 ), SubResource( 74 ), SubResource( 74 ), SubResource( 74 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 73 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[node name="sm" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="Braccia" type="Sprite" parent="."]
visible = false
position = Vector2( -0.404602, -62.6861 )
texture = ExtResource( 3 )
offset = Vector2( 5.17883, 19.4811 )

[node name="Muzzle" type="Position2D" parent="Braccia"]
position = Vector2( -57.1979, 74.2742 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.82499, 9.8715 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 3.97919, -0.30687 )
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="Position2D"]
position = Vector2( 10.6788, -16.0181 )
smoothing_enabled = true

[node name="Area2D" type="Area2D" parent="." groups=[
"sword",
]]
position = Vector2( -4, 83 )
scale = Vector2( 0.96, 1 )
gravity = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 4.73726, -50.0236 )
shape = SubResource( 3 )
disabled = true

[node name="DropBombCooldown" type="Timer" parent="."]
one_shot = true

[node name="Exhaust" type="Particles2D" parent="."]
position = Vector2( -49.4235, 56.5209 )
rotation = 3.12985
emitting = false
amount = 30
lifetime = 0.4
one_shot = true
speed_scale = 0.43
process_material = SubResource( 9 )

[node name="Exhaust2" type="Particles2D" parent="."]
position = Vector2( 41.359, 56.521 )
rotation = 6.26987
emitting = false
amount = 30
lifetime = 0.4
one_shot = true
speed_scale = 0.43
process_material = SubResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 13 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 72 )
animation = "walk"
frame = 13
speed_scale = 16.0
flip_h = true
[connection signal="timeout" from="DropBombCooldown" to="." method="_on_drop_bomb_cooldown_timeout"]
